spug/2-spug-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spug-db
  namespace: spug
spec:
  selector:
    matchLabels:
      app: spug-db
  replicas: 1
  template:
    metadata:
      labels:
        app: spug-db
    spec:
      containers:
      - args:
          - --port
          - "3306"
          - --character-set-server=utf8mb4
          - --collation-server=utf8mb4_unicode_ci
        image: mariadb:10.8.2
        imagePullPolicy: IfNotPresent
        name: spug-db
        resources: {}
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: db-claim0
      volumes:
        - name: db-claim0
          persistentVolumeClaim:
            claimName: spug-db
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: spug-db
  namespace: spug
  labels:
    app: spug-db
spec:
  ports:
  - targetPort: 3306
    port: 3306
  selector:
     app: spug-db
