spug/4-ingress.yaml
kind: Service
apiVersion: v1
metadata:
  name: spug
spec:
  type: ExternalName
  externalName: spug-service.spug.svc.cluster.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spug
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
  - host: spug.test.me
    http:
      paths:
      - backend:
          service:
            name: spug
            port:
              number: 80
        path: /
        pathType: Prefix
